<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/help_overall"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/help_settings"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:text="@string/help_icon_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/circle_black"
        android:drawablePadding="10dp"
        android:text="@string/legend_black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/circle_red"
        android:drawablePadding="10dp"
        android:text="@string/legend_red"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/circle_green"
        android:drawablePadding="10dp"
        android:text="@string/legend_green"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/circle_yellow"
        android:drawablePadding="10dp"
        android:text="@string/legend_yellow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/circle_blue"
        android:drawablePadding="10dp"
        android:text="@string/legend_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:paddingBottom="5dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/help_icon_type"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ak_white"
            android:drawablePadding="10dp"
            android:text="Rifle Assault"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/gun_white"
            android:drawablePadding="10dp"
            android:text="Gun assault"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/op_white"
            android:drawablePadding="10dp"
            android:text="Stabbing"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/hostage_white"
            android:drawablePadding="10dp"
            android:text="Hostage situation"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/car_white"
            android:drawablePadding="10dp"
            android:text="Car bomb"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/explode_white"
            android:drawablePadding="10dp"
            android:text="Explosion"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/gas_white"
            android:drawablePadding="10dp"
            android:text="Poison attack"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/fires_white"
            android:drawablePadding="10dp"
            android:text="Fire / Arson"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/biohazard_white"
            android:drawablePadding="10dp"
            android:text="Biohazard"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/comp_white"
            android:drawablePadding="10dp"
            android:text="Hackers"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/thug_white"
            android:drawablePadding="10dp"
            android:text="People in masks"
            android:gravity="center_vertical|left"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/police_white"
            android:drawablePadding="10dp"
            android:text="Police intervention"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/speech_white"
            android:drawablePadding="10dp"
            android:text="Public speech"
            android:gravity="center_vertical|left"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/video_white"
            android:drawablePadding="10dp"
            android:text="Video content"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/twitterico_white"
            android:drawablePadding="10dp"
            android:text="Twitter"
            android:gravity="center_vertical|left"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/facebookico_white"
            android:drawablePadding="10dp"
            android:text="Facebook"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>